namespaces/live.cloud-platform.service.justice.gov.uk/request-personal-information-development/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "request-personal-information-development"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "cdpt-request-personal-information"
    cloud-platform.justice.gov.uk/application: "Request personal information"
    cloud-platform.justice.gov.uk/owner: "Central Digital Product Team: central-digital-product-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/request-personal-information"
    cloud-platform.justice.gov.uk/team-name: "central-digital-product-team"
    cloud-platform.justice.gov.uk/review-after: ""
